results/classifier/118/mistranslation-i386/1382477
i386: 0.979
device: 0.859
mistranslation: 0.856
socket: 0.797
network: 0.788
vnc: 0.782
kernel: 0.709
files: 0.702
ppc: 0.699
graphic: 0.660
architecture: 0.645
x86: 0.640
virtual: 0.638
semantic: 0.638
register: 0.585
PID: 0.537
TCG: 0.537
peripherals: 0.513
assembly: 0.497
arm: 0.493
performance: 0.487
permissions: 0.482
risc-v: 0.479
KVM: 0.476
debug: 0.474
hypervisor: 0.465
boot: 0.453
VMM: 0.412
user-level: 0.411
--------------------
i386: 0.999
x86: 0.991
debug: 0.861
files: 0.748
kernel: 0.256
hypervisor: 0.121
TCG: 0.073
device: 0.064
user-level: 0.043
virtual: 0.030
VMM: 0.028
register: 0.025
architecture: 0.024
semantic: 0.018
PID: 0.018
KVM: 0.012
boot: 0.007
assembly: 0.006
performance: 0.005
risc-v: 0.004
ppc: 0.004
network: 0.004
socket: 0.004
peripherals: 0.003
graphic: 0.003
permissions: 0.002
vnc: 0.002
mistranslation: 0.001
arm: 0.000

hw/i386/intel_iommu.c:902: wrong logical operator ?

/home/dcb/qemu/trunk/qemu/hw/i386/intel_iommu.c:902:5: error: logical ‘and’ applied to non-boolean constant [-Werror=logical-op]
     pvtd_as = s->address_spaces[VTD_SID_TO_BUS(source_id)];
     ^

$ fgrep VTD_SID_TO_BUS `find . -name \*.h -print`
./include/hw/i386/intel_iommu.h:#define VTD_SID_TO_BUS(sid)         (((sid) >> 8) && 0xff)
$ 

Sounds to me like

#define VTD_SID_TO_BUS(sid)         (((sid) >> 8) & 0xff)

would be better.

Fix has been included here:
http://git.qemu.org/?p=qemu.git;a=commitdiff;h=1e06f131fd9a44dd4af

